corrected header and hero sections

--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
   <body>
     <div class="container-wrapper">
       <div class="container-nav">
-        <p>Adrian's Sandwiches</p>
+        <div id="page-title">
+          <p>Adrian's Smartwatches</p>
+        </div>
         <ul class="navbar">
-          <li>Home</li>
-          <li>About</li>
-          <li>Products</li>
-          <li>Contacts</li>
+          <a href=""><li>Home</li></a>
+          <a href=""><li>About</li></a>
+          <a href=""><li>Products</li></a>
+          <a href=""><li>Contact</li></a>
         </ul>
       </div>
       <div class="container-hero">
         <div class="awesome">
           <div class="bigger-awesome">
-            Ayda is awesome!
+            Become the true definition of modernity.
           </div>
           <div class="smaller-awesome">
             This website is super-doper-amazingly awesome and anyone who defies it can shove it!
           </div>
         </div>
         <div class="hero-image">
-            <img src="/assets/dims.jpeg" alt="picture" width="55%">
+            <img src="/assets/dims.jpeg" alt="picture" width="65%">
           </div>
       </div>
       <div class="container-product">
