updated item container

--- a/index.html
+++ b/index.html
@@ -33,13 +33,24 @@
           <div class="smaller-awesome">
             This website is super-doper-amazingly awesome and anyone who defies it can shove it!
           </div>
+          <button class="button">Try Out</button>
         </div>
         <div class="hero-image">
             <img src="/assets/dims.jpeg" alt="picture" width="65%">
           </div>
       </div>
       <div class="container-product">
-
+        <div id="product-title">Some random information.</div>
+        <!-- CHANGES -->
+        <div class="flex-gap">
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+          <div><img class="item-picture" src="./assets/pic.jpg"/></div>
+        </div>
+        <!-- CHANGES -->
       </div>
       <div class="container-quote">
 
