improved hero and navbar section.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container-wrapper">
@@ -31,12 +34,13 @@
             Become the true definition of modernity.
           </div>
           <div class="smaller-awesome">
-            This website is super-doper-amazingly awesome and anyone who defies it can shove it!
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur.
           </div>
           <button class="button">Try Out</button>
         </div>
         <div class="hero-image">
-            <img src="/assets/dims.jpeg" alt="picture" width="65%">
+            <img src="/assets/dims.jpeg" alt="picture" width="95%" length="95%">
           </div>
       </div>
       <div class="container-product">
@@ -53,15 +57,23 @@
         <!-- CHANGES -->
       </div>
       <div class="container-quote">
-
+        <blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</blockquote>
+          <!-- <p>-Adrian</p> -->
       </div>
       <div class="container-action">
         <div class="quote">
-
+          <div id="action-text">
+            <span id="call-to-action">Call to action! It's time!</span>
+            <span class="smaller-action-txt">Sign up for our product by clicking that button right over there!</span>
+          </div>
+          <div class="action-button">
+            <button class="button-sign">Sign Up</button>
+          </div>
         </div>
       </div>
       <div class="container-footer">
-
+        <p>Adrian Ghorbani - 2022 - dedicated to Odin Project</p>
       </div>
     </div>
     <!--[if lt IE 7]>
